# rocket-sdk-python

./: .gitignore  README.md  pyproject.toml
examples/: .env.example  README.md  example_utils.py  simple_bot.py  websocket_example.py  ws_listener.py
src/rocket_sdk_python/: __init__.py  sdk.py
src/rocket_sdk_python/client/: __init__.py  rest.py  ws.py
src/rocket_sdk_python/crypto/: __init__.py  eip191.py  eip712.py  signer.py
src/rocket_sdk_python/tx/: __init__.py  builder.py  serialization.py  sign.py
src/rocket_sdk_python/types/: __init__.py  base.py  orders.py  transactions.py
src/rocket_sdk_python/types/primitives/: __init__.py  account_address.py  aliases.py  asset.py  constants.py  instrument.py  order.py
src/rocket_sdk_python/types/rest/: __init__.py  account_fees.py  account_nonce.py  assets.py  bridge_events.py  candles.py  collateral.py  faucet_claim.py  fees.py  funding_rate_events.py  instruments.py  max_leverage.py  open_orders.py  order_events.py  pagination.py  position.py  position_funding_events.py  vault_history.py  vault_stats.py  vaults.py
src/rocket_sdk_python/types/transaction/: __init__.py  sign.py
src/rocket_sdk_python/types/views/: __init__.py  account_fees.py  assets.py  bridge_event.py  collateral.py  funding_rate.py  global_fees.py  instrument.py  instrument_stats.py  open_order.py  order_event.py  position.py  position_funding_events.py  vault.py  vault_history.py  vault_stats.py
src/rocket_sdk_python/types/ws/: __init__.py  client_message.py  server_message.py  subscription_kind.py
(+8 files in other folders)
