[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocket_sdk_python"
version = "0.1.0"
description = "Python SDK for Rocket Chain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true


[tool.hatch.build.targets.wheel]
packages = ["src/rocket_sdk_python"]