[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "eth-account>=0.13.7",
  "eth-keys>=0.7.0",
  "httpx>=0.28.1",
  "msgpack>=1.1.2",
  "pydantic>=2.12.5",
  "websockets>=16.0",
]
description = "Python SDK for Rocket Chain"
name = "rocket_sdk_python"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/rocket_sdk_python"]

[dependency-groups]
dev = [
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.1",
]
